k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mongo
spec:
  selector:
    matchLabels:
      app: order-mongo
  template:
    metadata:
      labels:
        app: order-mongo
    spec:
      containers:
        - name: order-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: order-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-mongo
spec:
  selector:
    matchLabels:
      app: stock-mongo
  template:
    metadata:
      labels:
        app: stock-mongo
    spec:
      containers:
        - name: stock-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: stock-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mongo
spec:
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
        - name: payment-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: payment-pvc
