k8s/order-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    component: order
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: order
  template:
    metadata:
      labels:
        component: order
    spec:
      containers:
        - name: order
          image: enriquebarba97/order-service:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "app:app"]
          ports:
            - containerPort: 5000
