k8s/stock-mongo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-mongodb
  labels:
    app: stock-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-mongodb
  template:
    metadata:
      labels:
        app: stock-mongodb
    spec:
      containers:
      - name: stock-mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: stock-mongodb-service
spec:
  selector:
    app: stock-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
