k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 80
  rules:
    - http:
        paths:
          - path: /orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5000
          - path: /stock/?(.*)
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 5000
          - path: /payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5000
