k8s/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ingress
   annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /orderdb/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5000
          - path: /stockdb/?(.*)
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 5000
          - path: /userdb/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: dbs-access-service
spec:
  selector:
    app: ingress-servess
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30001
